# model_house_prediction

./: Makefile  Pipfile  README.md  pyproject.toml
notebooks/: model_prediction.ipynb
